# app/Models/Offer.php
@@ -11,14 +11,10 @@ use Illuminate\Database\Eloquent\Model;
  *     type="object",
  *
  *     @OA\Property(property="id", type="integer", example=1),
- *     @OA\Property(property="name", type="string", example="Smartphone"),
- *     @OA\Property(property="image", type="string", example="product_image.jpg"),
- *     @OA\Property(property="price", type="number", format="float", example=499.99),
- *     @OA\Property(property="description", type="string", example="Samsung A30s white color 8Ram 128GB space"),
- *     @OA\Property(property="user", type="string", example="John Doe"),
- *     @OA\Property(property="total_amount", type="integer", example=100),
- *     @OA\Property(property="expiry_date", type="string", format="date", example="2024-12-31"),
- *     @OA\Property(property="category", type="string", example="Electronics"),
+ *     @OA\Property(property="discount_percentage", type="number", format="float", example=15.50),
+ *     @OA\Property(property="start_date", type="string", format="date", example="2024-09-01"),
+ *     @OA\Property(property="end_date", type="string", format="date", example="2024-12-31"),
+ *     @OA\Property(property="product_id", type="integer", example=1),
  * )
  */
 class Offer extends Model
